--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@types/pino": "^7.0.5",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "cors": "^2.8.5",
@@ -58,6 +59,8 @@
     "eslint": "^8.56.0",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "pino": "^8.17.2",
+    "pino-pretty": "^10.3.1",
     "prettier": "^3.1.1"
   },
   "engines": {
